--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,7 +8,7 @@
         <title>Travel Guide App | Your Friendly Travel Companion</title>
         <meta name="Travel Guide App" content="An intelligent app which dynamically generate geographic and weather forecast information based on simple travel inputs." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="images/favicon.ico">
+        <link rel="icon" href="../img/favicon.ico">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </head>
@@ -22,7 +22,7 @@
 
             <div class="logo">
 
-                <img src="/src/client/img/logo.png" alt="logo">
+                <img src="../img/logo.png" alt="logo">
 
             </div>
 
@@ -281,11 +281,11 @@
 
         <script>
 
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js');
-                });
-            }
+            // if ('serviceWorker' in navigator) {
+            //     window.addEventListener('load', () => {
+            //         navigator.serviceWorker.register('/service-worker.js');
+            //     });
+            // }
 
         </script>
 
