--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -281,11 +281,11 @@
 
         <script>
 
-            // if ('serviceWorker' in navigator) {
-            //     window.addEventListener('load', () => {
-            //         navigator.serviceWorker.register('/service-worker.js');
-            //     });
-            // }
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
 
         </script>
 
