--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -88,8 +88,8 @@ header {
   width: 100%;
   min-height: 100vh;
   background-color: $midGrey;
-  // background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
-  //   url("http://localhost:8081/img/top-img.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
+    url("http://localhost:8081/img/top-img.jpg");
   background-size: cover;
   background-attachment: fixed;
 
