--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -89,7 +89,7 @@ header {
   min-height: 100vh;
   background-color: $midGrey;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
-    url("http://localhost:8081/img/top-img.jpg");
+    url("../img/top-img.jpg");
   background-size: cover;
   background-attachment: fixed;
 
